styles.css
/* ... */
.pixel-banner-video {
    object-fit: cover;
    object-position: var(--pixel-banner-x-position, 50%) var(--pixel-banner-y-position, 50%) !important;
}

.markdown-embed-content .markdown-preview-view {
    min-height: var(--pixel-banner-embed-min-height, unset) !important;
}
.markdown-embed-content .pixel-banner-image {
    position: absolute !important;
	left: 0 !important;
    z-index: unset !important;
}
.markdown-embed-content .pixel-banner-image ~ div {
    position: relative;
    z-index: 1;
}

/* collapse scrollbar gutter when no scrollbar is present */
.pixel-banner .markdown-preview-view,
.pixel-banner .markdown-source-view .cm-scroller {
    scrollbar-gutter: auto !important;
}

/* Apply title color to both reading and editing mode */
.pixel-banner div.inline-title,
.pixel-banner .markdown-source-view div.inline-title {
    color: var(--pixel-banner-title-color, var(--inline-title-color));
}

/* fix for banner image overlapping with note content */
/* isolate the banner image from the note content */
.view-content.pixel-banner {
    position: relative;
    isolation: isolate;
}


/* ----------------------------------------------- */
/* -- Specific styles for hover popover banners -- */
/* ----------------------------------------------- */
.popover.hover-popover {
    min-height: 200px !important;
}
.popover.hover-popover .pixel-banner-image {
    background-repeat: repeat !important;
    min-height: 100px !important;
}
.pixel-banner-image + .markdown-preview-sizer.markdown-preview-section {
    margin-top: 100px !important;
}
.hover-popover .markdown-preview-view.pixel-banner {
    position: relative;
    isolation: isolate;
}
.hover-popover .pixel-banner-image {
    position: absolute !important;
    top: 0;
    left: 0;
    right: 0;
    z-index: 0;
    width: 100% !important;
    max-width: 100% !important;
    border-radius: var(--pixel-banner-radius, 17px) !important;
}
.hover-popover .markdown-preview-view .markdown-preview-sizer {
    position: relative;
    z-index: 1;
}
.hover-popover .markdown-preview-view.pixel-banner .markdown-preview-sizer {
    padding-top: var(--pixel-banner-content-start, 150px) !important;
}
/* ----------------------------------------------- */

.cm-sizer .metadata-container,
.markdown-preview-sizer .metadata-container {
    z-index: 1;
}

/* fix overflow issue with embedded notes */
.internal-embed:not(.image-embed),
.internal-embed:not(.image-embed) > .markdown-embed-content > .markdown-preview-view {
    overflow: hidden;
}

/* hide frontmatter fields in reading mode */
.markdown-preview-view .pixel-banner-hidden-field {
    display: none !important;
}
/* Add specific targeting for properties view */
.metadata-property.pixel-banner-hidden-field {
    display: none !important;
}


/* ----------------------------------------------------- */
/* -- content start (push frontmatter container down) -- */
/* *** NOTE: this is now handled in bannerManager.js *** */
/* ***       for faster rendering!                   *** */
/* ----------------------------------------------------- */
/* .view-content.pixel-banner > .markdown-source-view .cm-sizer,
.view-content.pixel-banner > .markdown-reading-view .markdown-preview-sizer {
    padding-top: var(--pixel-banner-content-start, 355px) !important;
    padding-bottom: 0 !important;
} */
/* -- fix for embedded notes -- */
.internal-embed > .markdown-embed-content .cm-sizer:first-of-type,
.internal-embed > .markdown-embed-content .markdown-preview-sizer:first-of-type {
    padding-top: unset !important;
}
.internal-embed > .markdown-embed-content .cm-sizer:first-of-type > .pixel-banner-image ~ .markdown-preview-pusher,
.internal-embed > .markdown-embed-content .markdown-preview-sizer:first-of-type > .pixel-banner-image ~ .markdown-preview-pusher {
    height: var(--pixel-banner-content-start, 0.1px) !important;
}


/* -------------------------- */
/* -- Settings Page Styles -- */
/* -------------------------- */
.vertical-tab-content-container {
    display: flex;
    flex-direction: column;
}

.pixel-banner-settings {
    display: flex;
    flex-direction: column;
    overflow: hidden;
    padding: 20px;
    max-width: 800px;
}

.pixel-banner-header {
    text-align: center;
    margin-bottom: 30px;
    background-color: var(--background-secondary);
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
}

.pixel-banner-header h2 {
    margin-bottom: 10px;
    color: var(--text-accent);
}

.pixel-banner-main-content {
    flex: 1;
    display: flex;
    flex-direction: column;
    gap: 10px;
    overflow: hidden;
}

.pixel-banner-settings-tabs {
	flex-direction: row;
	flex: 0 auto;
}

.pixel-banner-settings-tab-content-container {
	display: flex;
    flex-direction: column;
    flex: 1;
    overflow: hidden;
}

.pixel-banner-settings-tab-content-container > .tab-content {
    overflow: auto;
    padding-right: 10px;
}

.tab-content[data-tab="Folder Images"] {
    padding-bottom: 10px;
}
.tab-content[data-tab="Folder Images"] .add-folder-image-setting {
    position: absolute;
	bottom: 0;
	right: 64px;
    padding-right: 16px;
    background: var(--color-secondary);
}
.tab-content[data-tab="Folder Images"] .add-folder-image-setting button {
    color: var(--text-on-accent);
    border-bottom: 2px solid var(--text-accent-hover);
    background: var(--color-accent);
}

.pixel-banner-section {
    background-color: var(--background-secondary);
    border-radius: 10px;
    padding: 20px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
}

.pixel-banner-section h3 {
    margin-top: 0;
    margin-bottom: 15px;
    color: var(--text-accent-hover);
    font-size: 1.2em;
}

.pixel-banner-section ol {
    padding-left: 20px;
    margin-bottom: 15px;
}

.pixel-banner-section pre {
    background-color: var(--background-primary);
    border-radius: 5px;
    padding: 10px;
    margin-top: 10px;
    overflow-x: auto;
}
/* ... */

